package structural.facade;

class BankAccount {
    void moneyTransfer() {
        System.out.println("Przelew pieniedzy na konto");
    }
}
