package structural.facade;

class Database {
    void changeItemStatus() {
        System.out.println("Zmiana statusu towaru");
    }
}
