package structural.facade;

class ParcelService {
    void orderdelivery() {
        System.out.println("Paczka zostala wyslana");
    }
}
