package structural.facade;

class Warehouse {
    void packItem() {
        System.out.println("Towar został przygotowany do pakowania");
    }
}
